--- a/miniProject4/BlazorCloud/BlazorCloud/Components/Account/Pages/Login.razor
+++ b/miniProject4/BlazorCloud/BlazorCloud/Components/Account/Pages/Login.razor
@@ -13,8 +13,8 @@
 <PageTitle>Log in</PageTitle>
 
 <h1>Log in</h1>
-<div class="row">
-    <div class="col-lg-6">
+@* <div class="row"> *@
+@*     <div class="col-lg-6"> *@
         <section>
             <StatusMessage Message="@errorMessage"/>
             <EditForm Model="Input" method="post" OnValidSubmit="LoginUser" FormName="login">
@@ -54,15 +54,15 @@
                 </div>
             </EditForm>
         </section>
-    </div>
-    <div class="col-lg-4 col-lg-offset-2">
-        <section>
-            <h3>Use another service to log in.</h3>
-            <hr/>
-            <ExternalLoginPicker/>
-        </section>
-    </div>
-</div>
+    @* </div> *@
+    @* <div class="col-lg-4 col-lg-offset-2"> *@
+    @*     <section> *@
+    @*         <h3>Use another service to log in.</h3> *@
+    @*         <hr/> *@
+    @*         <ExternalLoginPicker/> *@
+    @*     </section> *@
+    @* </div> *@
+@* </div> *@
 
 @code {
     private string? errorMessage;
