--- a/miniProject4/BlazorCloud/BlazorCloud/Components/App.razor
+++ b/miniProject4/BlazorCloud/BlazorCloud/Components/App.razor
@@ -5,9 +5,12 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
+    @* Note bootstrap may need to be removed to be compatable with MudBlazor *@
     <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]"/>
     <link rel="stylesheet" href="@Assets["app.css"]"/>
     <link rel="stylesheet" href="@Assets["BlazorCloud.styles.css"]"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet @rendermode="PageRenderMode"/>
@@ -16,6 +19,7 @@
 <body>
 <Routes @rendermode="PageRenderMode"/>
 <script src="_framework/blazor.web.js"></script>
+<script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]"></script>
 </body>
 
 </html>
