--- a/miniProject4/BlazorCloud/BlazorCloud/Components/Layout/MainLayout.razor
+++ b/miniProject4/BlazorCloud/BlazorCloud/Components/Layout/MainLayout.razor
@@ -1,19 +1,40 @@
 ﻿@inherits LayoutComponentBase
 
+@* Required *@
+<MudThemeProvider />
+<MudPopoverProvider />
+
+@* Needed for dialogs *@
+<MudDialogProvider />
+
+@* Needed for snackbars *@
+<MudSnackbarProvider />
+
+
 <div class="page">
     <div class="sidebar">
         <NavMenu/>
     </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
+    <MudLayout>
+        @* <MudMainContent Style="padding-top: 0" MaxWidth="MaxWidth.Medium"> *@
+        <MudMainContent Style="padding-top: 0">
+            <main>
+                <div class="top-row px-4">
+                    <span>5577-IoT Mini-project #4</span>
+                    @* <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">5577-IoT Mini-project #4</a> *@
+                </div>
+                
+                @* <MudDrawer Open="true"> *@
+                @* *@
+                @* </MudDrawer> *@
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+                <article class="content px-4">
+                    @Body
+                </article>
+            </main>
+        </MudMainContent>
+    </MudLayout>
 </div>
 
 <div id="blazor-error-ui" data-nosnippet>
