--- a/miniProject4/BlazorCloud/BlazorCloud/Components/Layout/NavMenu.razor
+++ b/miniProject4/BlazorCloud/BlazorCloud/Components/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorCloud</a>
+        <a class="navbar-brand" href="">IoT Cloud</a>
     </div>
 </div>
 
@@ -27,6 +27,12 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+            </NavLink>
+        </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="DataGraph">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Data Graph
             </NavLink>
         </div>
 
