--- a/miniProject4/BlazorCloud/BlazorCloud/Components/Layout/NavMenu.razor
+++ b/miniProject4/BlazorCloud/BlazorCloud/Components/Layout/NavMenu.razor
@@ -35,6 +35,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Data Graph
             </NavLink>
         </div>
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="DatabaseView">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Db Viewer
+            </NavLink>
+        </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
