--- a/miniProject4/BlazorCloud/BlazorCloud/Components/Pages/DataGraph.razor
+++ b/miniProject4/BlazorCloud/BlazorCloud/Components/Pages/DataGraph.razor
@@ -2,6 +2,7 @@
 @using BlazorCloud.Data
 @using BlazorCloud.Data.Entities
 @using Microsoft.EntityFrameworkCore
+@implements IDisposable
 
 @rendermode InteractiveServer
 
@@ -102,7 +103,7 @@
     private void updateTempData()
     {
         var fiveMinutesAgo = DateTime.Now - TimeSpan.FromMinutes(5.5);
-        
+
         var envData = dbContext.EnvironmentData
             .AsNoTracking()
             .OrderByDescending(e => e.Id)
@@ -168,5 +169,6 @@
     public void Dispose()
     {
         API.PostData.EnvironmentDataUpdated -= OnNewData;
+        // dbContext.Dispose(); // Don't dispose the db context since it is shared.
     }
 }
