--- a/miniProject4/BlazorCloud/BlazorCloud/Components/Pages/DataGraph.razor
+++ b/miniProject4/BlazorCloud/BlazorCloud/Components/Pages/DataGraph.razor
@@ -112,7 +112,8 @@
         var envData = dbContext.EnvironmentData
             .AsNoTracking()
             .OrderByDescending(e => e.Id)
-            // .Where(e => e.CreatedAt >= fiveMinutesAgo)
+            // Note: This can make the graph look empty if there is no data from the last five minutes. 
+            .Where(e => e.CreatedAt >= fiveMinutesAgo)
             .Take((int)Math.Ceiling(60*5.1)) //Just over five minutes of data at a rate of one update per second.
             .Select(e => new { e.CreatedAt, e.Temperature, e.Humidity })
             .ToList(); // Required for temperature to be non-zero. Likely needed because of SQL reasons.
