--- a/miniProject4/BlazorCloud/BlazorCloud/Components/App.razor
+++ b/miniProject4/BlazorCloud/BlazorCloud/Components/App.razor
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="@Assets["BlazorCloud.styles.css"]"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet @rendermode="PageRenderMode"/>
