--- a/miniProject4/BlazorCloud/BlazorCloud/Components/Pages/Home.razor
+++ b/miniProject4/BlazorCloud/BlazorCloud/Components/Pages/Home.razor
@@ -1,7 +1,21 @@
 ﻿@page "/"
+@inject NavigationManager Nav
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, 5577-IoTs!</h1>
 
-Welcome to your new app.
+Welcome to your BlazorCloud.
+
+@code {
+    static bool haveRedirectedAllready = false;
+    
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender && !haveRedirectedAllready)
+        {
+            haveRedirectedAllready = true;
+            Nav.NavigateTo("/weather");
+        }
+    }
+}
